force-app/main/default/objects/Ticket_Certificate__c/Ticket_Certificate__c.object-meta.xml
<CustomObject>
    <label>Ticket Certificate</label>
    <nameField>
        <label>Ticket No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>