force-app/main/default/objects/Ticket_Certificate__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>External_Tickets__r.ACCOUNT_CODE__c</formula>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>