force-app/main/default/objects/Ticket_Certificate__c/fields/Add_On_Rules__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Rules__c</fullName>
    <formula>TEXT(External_Tickets__r.Add_On_Rules__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add On Rules</label>
    <type>Text</type>
</CustomField>