force-app/main/default/objects/Ticket_Certificate__c/fields/Application_Department__c.field-meta.xml
<CustomField>
    <fullName>Application_Department__c</fullName>
    <formula>TEXT(External_Tickets__r.Office__c)</formula>
    <label>Apply Dept.</label>
    <type>Text</type>
</CustomField>