force-app/main/default/objects/Ticket_Certificate__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>TEXT( External_Tickets__r.Application_Type__c )</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>