force-app/main/default/objects/Ticket_Certificate__c/fields/Apply_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Date__c</fullName>
    <formula>External_Tickets__r.Apply_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Date</label>
    <type>Date</type>
</CustomField>