force-app/main/default/objects/Ticket_Certificate__c/fields/APVL_CODE__c.field-meta.xml
<CustomField>
    <fullName>APVL_CODE__c</fullName>
    <formula>External_Tickets__r.APVL_CODE__c</formula>
    <label>APVL CODE</label>
    <type>Text</type>
</CustomField>