force-app/main/default/objects/Ticket_Certificate__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <formula>External_Tickets__r.Arrival__c</formula>
    <label>Arrival</label>
    <type>Text</type>
</CustomField>