force-app/main/default/objects/Ticket_Certificate__c/fields/ArrivalID__c.field-meta.xml
<CustomField>
    <fullName>ArrivalID__c</fullName>
    <formula>External_Tickets__r.ArrivalID__c</formula>
    <label>ArrivalID</label>
    <type>Text</type>
</CustomField>