force-app/main/default/objects/Ticket_Certificate__c/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <formula>External_Tickets__r.Booking_Class__c</formula>
    <label>Booking Class</label>
    <type>Text</type>
</CustomField>