force-app/main/default/objects/Ticket_Certificate__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Barter Ticket</description>
    <inlineHelpText>手動輸入</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>