force-app/main/default/objects/Ticket_Certificate__c/fields/Case_Used__c.field-meta.xml
<CustomField>
    <fullName>Case_Used__c</fullName>
    <description>Barter Ticket</description>
    <inlineHelpText>手動輸入</inlineHelpText>
    <label>Case Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>