force-app/main/default/objects/Ticket_Certificate__c/fields/Certificate_Version__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Version__c</fullName>
    <formula>TEXT(External_Tickets__r.Certificate_Version__c)</formula>
    <label>Certificate Version</label>
    <type>Text</type>
</CustomField>