force-app/main/default/objects/Ticket_Certificate__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>External_Tickets__r.Company__c</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>