force-app/main/default/objects/Ticket_Certificate__c/fields/Coupon_Number__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Coupon Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>