force-app/main/default/objects/Ticket_Certificate__c/fields/Date_of_Birth2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth2__c</fullName>
    <description>雙人旅客生日</description>
    <inlineHelpText>雙人旅客生日</inlineHelpText>
    <label>Date of Birth 2</label>
    <type>Date</type>
</CustomField>