force-app/main/default/objects/Ticket_Certificate__c/fields/Depature__c.field-meta.xml
<CustomField>
    <fullName>Depature__c</fullName>
    <formula>External_Tickets__r.Depature__c</formula>
    <label>Depature</label>
    <type>Text</type>
</CustomField>