force-app/main/default/objects/Ticket_Certificate__c/fields/DepatureID__c.field-meta.xml
<CustomField>
    <fullName>DepatureID__c</fullName>
    <formula>External_Tickets__r.DepatureID__c</formula>
    <label>DepatureID</label>
    <type>Text</type>
</CustomField>