force-app/main/default/objects/Ticket_Certificate__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>TEXT(External_Tickets__r.Discount__c)</formula>
    <label>Discount Percentage</label>
    <type>Text</type>
</CustomField>