force-app/main/default/objects/Ticket_Certificate__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <formula>TEXT( External_Tickets__r.Fare_Basis__c )</formula>
    <label>Discount Code</label>
    <type>Text</type>
</CustomField>