force-app/main/default/objects/Ticket_Certificate__c/fields/Embargo__c.field-meta.xml
<CustomField>
    <fullName>Embargo__c</fullName>
    <formula>External_Tickets__r.Embargo__c</formula>
    <label>Embargo</label>
    <type>Checkbox</type>
</CustomField>