force-app/main/default/objects/Ticket_Certificate__c/fields/Embargo_Date_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Embargo_Date_Bulk__c</fullName>
    <label>Embargo 1st travel sector (Bulk)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>