force-app/main/default/objects/Ticket_Certificate__c/fields/Embargo_Next_Year_World_to_Taiwan__c.field-meta.xml
<CustomField>
    <fullName>Embargo_Next_Year_World_to_Taiwan__c</fullName>
    <label>Embargo：Next Year（World to Taiwan）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>