force-app/main/default/objects/Ticket_Certificate__c/fields/ENBOX__c.field-meta.xml
<CustomField>
    <fullName>ENBOX__c</fullName>
    <formula>External_Tickets__r.ENBOX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ENBOX</label>
    <type>Text</type>
</CustomField>