force-app/main/default/objects/Ticket_Certificate__c/fields/Exemption_Embargo__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Embargo__c</fullName>
    <formula>External_Tickets__r.Exemption_Embargo__c</formula>
    <label>Exemption - Embargo</label>
    <type>Checkbox</type>
</CustomField>