force-app/main/default/objects/Ticket_Certificate__c/fields/Exemption_Tax__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Tax__c</fullName>
    <formula>External_Tickets__r.Exemption_Tax__c</formula>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>