force-app/main/default/objects/Ticket_Certificate__c/fields/Exemption_YQ__c.field-meta.xml
<CustomField>
    <fullName>Exemption_YQ__c</fullName>
    <formula>External_Tickets__r.Exemption_YQ__c</formula>
    <label>YQ</label>
    <type>Checkbox</type>
</CustomField>