force-app/main/default/objects/Ticket_Certificate__c/fields/Exemption_YR__c.field-meta.xml
<CustomField>
    <fullName>Exemption_YR__c</fullName>
    <formula>External_Tickets__r.Exemption_YR__c</formula>
    <label>YR</label>
    <type>Checkbox</type>
</CustomField>