force-app/main/default/objects/Ticket_Certificate__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>External_Tickets__r.Expiration_Date__c</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>