force-app/main/default/objects/Ticket_Certificate__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <formula>External_Tickets__r.Extension__c</formula>
    <label>Extension</label>
    <type>Text</type>
</CustomField>