force-app/main/default/objects/Ticket_Certificate__c/fields/External_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_Status__c</fullName>
    <formula>IF(TEXT(External_Tickets__r.Item_Status__c)=&apos;Approve (Final)&apos;,
TRUE,FALSE)</formula>
    <label>External Ticket Status</label>
    <type>Checkbox</type>
</CustomField>