force-app/main/default/objects/Ticket_Certificate__c/fields/External_Tickets__c.field-meta.xml
<CustomField>
    <fullName>External_Tickets__c</fullName>
    <label>External Tickets</label>
    <referenceTo>External_Tickets__c</referenceTo>
    <relationshipName>Ticket_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>