force-app/main/default/objects/Ticket_Certificate__c/fields/Fare_Basis_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Fare_Basis_Bulk__c</fullName>
    <formula>External_Tickets__r.Fare_Basis_Bulk__c</formula>
    <label>Fare Basis Bulk</label>
    <type>Text</type>
</CustomField>