force-app/main/default/objects/Ticket_Certificate__c/fields/First_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Flight_Date__c</fullName>
    <label>1st Flight Date</label>
    <type>Date</type>
</CustomField>