force-app/main/default/objects/Ticket_Certificate__c/fields/First_Name_EN_2__c.field-meta.xml
<CustomField>
    <fullName>First_Name_EN_2__c</fullName>
    <description>雙人旅客英文名字</description>
    <inlineHelpText>雙人旅客英文名字</inlineHelpText>
    <label>First Name(EN) 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>