force-app/main/default/objects/Ticket_Certificate__c/fields/First_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Travel_Date__c</fullName>
    <formula>External_Tickets__r.Duration_First_Travel_Date__c</formula>
    <label>O/B Not Valid After</label>
    <type>Date</type>
</CustomField>