force-app/main/default/objects/Ticket_Certificate__c/fields/Flight_Date_Departure_External_c__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Departure_External_c__c</fullName>
    <formula>External_Tickets__r.Flight_Date_Departure_External__c</formula>
    <label>FlightDate</label>
    <type>Date</type>
</CustomField>