force-app/main/default/objects/Ticket_Certificate__c/fields/Flight_Number_Departure_External__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Departure_External__c</fullName>
    <formula>External_Tickets__r.Flight_Number_Departure_External__c</formula>
    <label>FlightNo</label>
    <type>Text</type>
</CustomField>