force-app/main/default/objects/Ticket_Certificate__c/fields/Full_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full Id</label>
    <type>Text</type>
</CustomField>