force-app/main/default/objects/Ticket_Certificate__c/fields/Hotline__c.field-meta.xml
<CustomField>
    <fullName>Hotline__c</fullName>
    <label>Hotline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+886-2-2791-1199</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>