force-app/main/default/objects/Ticket_Certificate__c/fields/In_Quota__c.field-meta.xml
<CustomField>
    <fullName>In_Quota__c</fullName>
    <formula>External_Tickets__r.In_Quota__c</formula>
    <label>In Quota</label>
    <type>Checkbox</type>
</CustomField>