force-app/main/default/objects/Ticket_Certificate__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <formula>External_Tickets__r.Duration_Issue_Date__c</formula>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>