force-app/main/default/objects/Ticket_Certificate__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <formula>External_Tickets__r.Item_Number__c</formula>
    <label>Item Number</label>
    <type>Text</type>
</CustomField>