force-app/main/default/objects/Ticket_Certificate__c/fields/Itinerary_Departure__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Departure__c</fullName>
    <formula>&quot;0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Itinerary(Departure)</label>
    <type>Text</type>
</CustomField>