force-app/main/default/objects/Ticket_Certificate__c/fields/Itinerary_Departure_CH__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Departure_CH__c</fullName>
    <label>出發地</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Itinerary_Departure_External_CN</valueSetName>
    </valueSet>
</CustomField>