force-app/main/default/objects/Ticket_Certificate__c/fields/Itinerary_Return__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Return__c</fullName>
    <formula>TEXT(External_Tickets__r.Itinerary_Return__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Itinerary(Return)</label>
    <type>Text</type>
</CustomField>