force-app/main/default/objects/Ticket_Certificate__c/fields/Itinerary_Return_CH__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Return_CH__c</fullName>
    <label>目的地</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Itinerary_Return_External_CH</valueSetName>
    </valueSet>
</CustomField>