force-app/main/default/objects/Ticket_Certificate__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>