force-app/main/default/objects/Ticket_Certificate__c/fields/Last_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_CN__c</fullName>
    <label>Last Name(CN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>