force-app/main/default/objects/Ticket_Certificate__c/fields/Last_Name_EN_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_EN_2__c</fullName>
    <description>雙人旅客英文姓氏</description>
    <inlineHelpText>雙人旅客英文姓氏</inlineHelpText>
    <label>Last Name(EN) 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>