force-app/main/default/objects/Ticket_Certificate__c/fields/Last_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_EN__c</fullName>
    <label>Last Name(EN)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>