force-app/main/default/objects/Ticket_Certificate__c/fields/N_Net__c.field-meta.xml
<CustomField>
    <fullName>N_Net__c</fullName>
    <formula>External_Tickets__r.N_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Fare Amount (N Net)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>