force-app/main/default/objects/Ticket_Certificate__c/fields/Paper_Certificated__c.field-meta.xml
<CustomField>
    <fullName>Paper_Certificated__c</fullName>
    <formula>External_Tickets__r.Paper_Certificated__c</formula>
    <label>Paper Certificated</label>
    <type>Checkbox</type>
</CustomField>