force-app/main/default/objects/Ticket_Certificate__c/fields/PAX_1_Email__c.field-meta.xml
<CustomField>
    <fullName>PAX_1_Email__c</fullName>
    <label>PAX 1 Email</label>
    <type>TextArea</type>
</CustomField>