force-app/main/default/objects/Ticket_Certificate__c/fields/PAX_1_Ticket_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>PAX_1_Ticket_Issue_Date__c</fullName>
    <label>PAX 1 Ticket Issue Date</label>
    <type>Date</type>
</CustomField>