force-app/main/default/objects/Ticket_Certificate__c/fields/PAX_2_Email__c.field-meta.xml
<CustomField>
    <fullName>PAX_2_Email__c</fullName>
    <inlineHelpText>雙人成行電子信箱</inlineHelpText>
    <label>PAX 2 Email</label>
    <type>TextArea</type>
</CustomField>