force-app/main/default/objects/Ticket_Certificate__c/fields/PAX_2_Ticket_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>PAX_2_Ticket_Issue_Date__c</fullName>
    <inlineHelpText>雙人成行開票日</inlineHelpText>
    <label>PAX 2 Ticket Issue Date</label>
    <type>Date</type>
</CustomField>