force-app/main/default/objects/Ticket_Certificate__c/fields/Person_in_charge__c.field-meta.xml
<CustomField>
    <fullName>Person_in_charge__c</fullName>
    <label>Ticketing PIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>