force-app/main/default/objects/Ticket_Certificate__c/fields/PFA_No__c.field-meta.xml
<CustomField>
    <fullName>PFA_No__c</fullName>
    <formula>External_Tickets__r.PFA_No__c</formula>
    <label>PFA No.</label>
    <type>Text</type>
</CustomField>