force-app/main/default/objects/Ticket_Certificate__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <formula>External_Tickets__r.PIC__c</formula>
    <label>PIC</label>
    <type>Text</type>
</CustomField>