force-app/main/default/objects/Ticket_Certificate__c/fields/PNR_2_FreeTicket__c.field-meta.xml
<CustomField>
    <fullName>PNR_2_FreeTicket__c</fullName>
    <inlineHelpText>雙人成行PNR</inlineHelpText>
    <label>PNR 2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>