force-app/main/default/objects/Ticket_Certificate__c/fields/PNR_FreeTicket__c.field-meta.xml
<CustomField>
    <fullName>PNR_FreeTicket__c</fullName>
    <label>PNR</label>
    <length>6</length>
    <type>Text</type>
</CustomField>