force-app/main/default/objects/Ticket_Certificate__c/fields/Prizes_and_Awards_won_by_chance__c.field-meta.xml
<CustomField>
    <fullName>Prizes_and_Awards_won_by_chance__c</fullName>
    <formula>TEXT(External_Tickets__r.Prizes_and_Awards_won_by_chance__c)</formula>
    <label>Prizes and Awards won by chance</label>
    <type>Text</type>
</CustomField>