force-app/main/default/objects/Ticket_Certificate__c/fields/QRcode__c.field-meta.xml
<CustomField>
    <fullName>QRcode__c</fullName>
    <formula>&apos;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&apos;+ Full_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QRcode</label>
    <type>Text</type>
</CustomField>