force-app/main/default/objects/Ticket_Certificate__c/fields/RBD__c.field-meta.xml
<CustomField>
    <fullName>RBD__c</fullName>
    <formula>TEXT(External_Tickets__r.RBD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RBD</label>
    <type>Text</type>
</CustomField>