force-app/main/default/objects/Ticket_Certificate__c/fields/Reason_for_Application__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Application__c</fullName>
    <formula>&quot;1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason for Application</label>
    <type>Text</type>
</CustomField>