force-app/main/default/objects/Ticket_Certificate__c/fields/Redeem_Valid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Valid_Start_Date__c</fullName>
    <formula>External_Tickets__r.Redeem_Valid_Start_Date__c</formula>
    <label>Redeem Valid Start Date</label>
    <type>Date</type>
</CustomField>