force-app/main/default/objects/Ticket_Certificate__c/fields/Remarks2__c.field-meta.xml
<CustomField>
    <fullName>Remarks2__c</fullName>
    <label>Remarks2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>