force-app/main/default/objects/Ticket_Certificate__c/fields/Routing_Customer_Service_Use__c.field-meta.xml
<CustomField>
    <fullName>Routing_Customer_Service_Use__c</fullName>
    <label>Routing External Use</label>
    <length>50</length>
    <type>Text</type>
</CustomField>