force-app/main/default/objects/Ticket_Certificate__c/fields/Second_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Second_Flight_No__c</fullName>
    <label>2nd Flight No.</label>
    <length>225</length>
    <type>Text</type>
</CustomField>