force-app/main/default/objects/Ticket_Certificate__c/fields/Second_Flight_RBD__c.field-meta.xml
<CustomField>
    <fullName>Second_Flight_RBD__c</fullName>
    <label>2nd Flight RBD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RBD</valueSetName>
    </valueSet>
</CustomField>