force-app/main/default/objects/Ticket_Certificate__c/fields/SerialID__c.field-meta.xml
<CustomField>
    <fullName>SerialID__c</fullName>
    <formula>External_Tickets__r.SerialID__c</formula>
    <label>BPM No.</label>
    <type>Text</type>
</CustomField>