force-app/main/default/objects/Ticket_Certificate__c/fields/SF_Case_No__c.field-meta.xml
<CustomField>
    <fullName>SF_Case_No__c</fullName>
    <label>SF Case No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>