force-app/main/default/objects/Ticket_Certificate__c/fields/Tax_TWD__c.field-meta.xml
<CustomField>
    <fullName>Tax_TWD__c</fullName>
    <label>Tax (TWD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>