force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Certificate_Remark__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Certificate_Remark__c</fullName>
    <description>&quot;Redeem Valid End Date&quot; 延期註記</description>
    <inlineHelpText>Valid End Date Extesion Remark</inlineHelpText>
    <label>Ticket Certificate Remark</label>
    <type>TextArea</type>
</CustomField>