force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number_2__c</fullName>
    <inlineHelpText>雙人成行機票號碼</inlineHelpText>
    <label>Ticket Number 2</label>
    <length>13</length>
    <type>Text</type>
</CustomField>