force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>