force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Number_External_Use__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number_External_Use__c</fullName>
    <label>Ticket Number External Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>