force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Receiver__c</fullName>
    <formula>External_Tickets__r.Ticket_Receiver__c</formula>
    <label>Ticket Receiver</label>
    <type>Text</type>
</CustomField>