force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Receiver_Email__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Receiver_Email__c</fullName>
    <formula>External_Tickets__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>