force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Receiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Receiver_Phone__c</fullName>
    <formula>External_Tickets__r.Phone__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>