force-app/main/default/objects/Ticket_Certificate__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <formula>External_Tickets__r.RecordType.Name</formula>
    <label>Ticket Type</label>
    <type>Text</type>
</CustomField>