force-app/main/default/objects/Ticket_Certificate__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Mstr.</fullName>
            </value>
            <value>
                <fullName>Miss.</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
                <isActive>false</isActive>
                <label>Miss</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>