force-app/main/default/objects/Ticket_Certificate__c/fields/Two_People__c.field-meta.xml
<CustomField>
    <fullName>Two_People__c</fullName>
    <formula>TEXT( External_Tickets__r.Two_People__c )</formula>
    <label>Two People</label>
    <type>Text</type>
</CustomField>