force-app/main/default/objects/Ticket_Certificate__c/validationRules/vrTicket_Certificate_InProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Certificate_InProgress</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(External_Tickets__r.Item_Status__c)&lt;&gt;&apos;Approval(Outer)&apos;</errorConditionFormula>
    <errorMessage>This ticket certificate isn&apos;t approved.</errorMessage>
</ValidationRule>