force-app/main/default/objects/Ticket_Certificate__c/validationRules/vrTicket_Certificate_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Certificate_Invalid</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &apos;Not Exchange&apos;)),
Redeem_Valid_End_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Redeem Valid End Date later than today.</errorMessage>
</ValidationRule>